2009-10-17  Glenn Morris  <rgm@gnu.org>

	* gs.el (gs-load-image): Replace obsolete forms of sit-for, sleep-for.

	* dired.el (dired-ls-F-marks-symlinks, dired-keep-marker-rename)
	(dired-keep-marker-copy, dired-keep-marker-hardlink)
	(dired-keep-marker-symlink, dired-dwim-target)
	(dired-copy-preserve-time): Do not autoload these defcustoms.

	* mail/rmail.el (rmail-write-region-annotate): Prevent viewing different
	messages from messing up the file coding.  (Bug#4623)

2009-10-17  Jari Aalto  <jari.aalto@cante.net>

	* textmodes/ispell.el (ispell-get-decoded-string): Give an error
	if no match is found for the current dictionary.  (Bug#4578)

	* textmodes/flyspell.el (flyspell-get-word): Make `following' argument
	optional, since that is how it is documented, and this is often called
	with a nil argument.  (Bug#4577)
	(flyspell-external-point-words, flyspell-auto-correct-word)
	(flyspell-correct-word-before-point, flyspell-word-search-forward)
	(flyspell-word-search-backward): Remove nil argument in calls to
	flyspell-get-word, since it is not needed now.

2009-10-17  Ulrich Mueller  <ulm@gentoo.org>

	* play/doctor.el (doctor-adverbp): Exclude some nouns.	(Bug#4565)

2009-10-16  Glenn Morris  <rgm@gnu.org>

	* net/rcirc.el (rcirc-authenticate): Simplify previous change.

2009-10-16  Toru TSUNEYOSHI  <t_tuneyosi@hotmail.com>

	* net/ange-ftp.el (ange-ftp-send-cmd): Handle `size' like `mdtm'.
	(ange-ftp-file-size): New function.
	(ange-ftp-file-attributes): Use it.

2009-10-16  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-smb.el (tramp-smb-version): New defvar.
	(tramp-smb-maybe-open-connection): Use it, in order to avoid
	repeated checks.

2009-10-16  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/byte-run.el (define-obsolete-variable-alias): Doc fix.
	Maybe copy some custom properties from old to new name.  (Bug#4706)

2009-10-16  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (error, sit-for, start-process-shell-command)